--- a/contactus.css
+++ b/contactus.css
@@ -11,7 +11,7 @@ li {
 body {
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   line-height: 1.6;
-  background-color:#515ada;
+  background-color:#ccc;
 }
 
 
